# TrajForRL

./: pyproject.toml
docs/: DESIGN.md
tests/: __init__.py  test_vaee_handler.py  test_verl_converter.py
traj_for_rl/: __init__.py  schema.py  vaee_handler.py  verl_converter.py
traj_for_rl/impl/: __init__.py  reward_compute.py  trajectory_construct.py
